# evidenceops-agent

./: .gitignore  EvidenceOps_Architecture_Evolution.pptx  README.md  pyproject.toml
app/: cli.py  config.py  data_process.py  ingest.py  orchestrator.py  test_query.py
app/agents/: research_agent.py
app/api/: main.py
app/models/: __init__.py  research.py
evaluations/: calculate_metrics.py  evaluation_dataset.jsonl  evaluation_report.md  evaluation_results.jsonl  failure_analysis.md  metrics_summary.json  run_evaluation.py  validate_dataset.py
reports/: ai_governance_controls__final_report_reportae2ff08b5a21.md  ai_governance_controls__report748411ffb194.md  ai_model_monitoring_governance_report_reportf4f9dda72394.md  audit_log.jsonl  comparison_of_nist_ai_rmf_isoiec_42001_and_owasp_llm_top_10_.md  compliance_comparison_iso_42001_and_nist_ai_risk_management_.md  compliance_report_iso_42001_vs_nist_ai_risk_management_frame.md  organization_backup_policy_and_ai_system_resilience__report7.md  password_requirements_research__report79437dc7d4f9.md  report24a1a1e9294b_explain_the_nist_ai_risk_management_fram.md  report32bfa9b43210_compare_the_nist_ai_risk_management_fram.md  report52fc622b2b86_compare_the_nist_ai_risk_management_fram.md  report699bc0e6931d_summarize_the_owasp_llm_top_10_explain.md  report6b6d93f16159_explain_isoiec_42001_describe_its_purp.md  reporte5c3bad843a7_compare_the_nist_ai_risk_management_fram.md  what_is_the_nist_ai_risk_management_framework_reportb3ea86cd.md
tests/: test_agent_approval.py  test_api.py  test_research_tools.py
(+26 files in other folders)
